# pln

./: .gitignore  CHANGELOG.md  LICENSE  README.md  specification.md  standard.md
.github/workflows/: dist.yml  homebrew.yml  release-plz.yml  website.yml
pln-parse/: Cargo.toml  dist-workspace.toml
pln-parse/src/: ast.rs  error.rs  lib.rs  main.rs  parser.rs  validate.rs
website/: astro.config.mjs  package-lock.json  package.json
website/src/components/: Footer.astro  LayoutRenderer.tsx  Nav.astro  Playground.tsx
website/src/layouts/: Base.astro
website/src/lib/: parser.ts  types.ts
website/src/pages/: ecosystem.astro  index.astro  playground.astro  specification.astro
website/src/styles/: global.css
