[package]
name = "pln-parse"
version = "0.1.0"
edition = "2024"
description = "Parser and CLI for Panel Layout Notation (PLN)"
license = "MIT"
repository = "https://github.com/Serenacula/pln"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
