[package]
name = "pln-parse"
version = "0.1.0"
edition = "2024"
description = "Parser and CLI for Panel Layout Notation (PLN)"
license = "MIT"
repository = "https://github.com/Serenacula/pln"
homepage = "https://github.com/Serenacula/pln"
keywords = ["parser", "layout", "panels", "notation", "cli"]
categories = ["command-line-utilities", "parser-implementations"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
debug = false
strip = "symbols"
lto = true
panic = "abort"
codegen-units = 1

[profile.dist]
inherits = "release"
